# flutter-rust-test

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  main.dart
rust/: Cargo.toml
windows/runner/: Runner.rc
