[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
flutter_rust_bridge_codegen = "^1.43.0"
cargo-xcode = "^1.4.3"

[lib]
crate-type = ["staticlib", "cdylib"]